# tsai-lab-scrna

./: .gitignore  1_setup_qc_filtering.ipynb  FIXES_FOR_NOTEBOOK.md  GUIDE.md  NOTEBOOK_STRUCTURE.md  NOTEBOOK_TUNING_CELLS.md  PARAMETER_TUNING_GUIDE.md  README.md  build_all_notebooks.py  cell_annotation_pipeline.ipynb  cell_annotation_pipeline_corrected.ipynb  cellbender_qc_annotation.py  complete_notebooks.py  generate_notebooks.py  limma_voom_gsea.py  pyproject.toml  requirements.txt
cell_annotation_colab/: 1_setup_qc_filtering.ipynb  1_setup_qc_filtering.py  2_clustering_markers.ipynb  2_clustering_markers.py  3_annotation_export.ipynb  3_annotation_export.py  4_differential_gene.ipynb  4_differential_gene.py  5_pathway_enrichment.ipynb  5_pathway_enrichment.py  COMPLETE_NOTEBOOK_TEMPLATES.md  NOTEBOOK_3_OUTPUTS.md  NOTEBOOK_COMPARISON.md  NOTEBOOK_FILES_SUMMARY.md  README_NOTEBOOKS.md  START_HERE.md
r/: 1_cellbender_qc_annotation.Rmd  2_limma_voom_gsea.Rmd  run_r_analysis.R
utils/: annotation.py  cell_type.py  data_loader.py  differential_expression.py  improved_doublet_detection.py  pathway_analysis.py  pathway_visualization.py  processing.py  qc_filters.py  qc_utils.py  qc_violin_plots.py  recluster.py
