[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tsai-lab-scrna"
version = "0.1.0"
description = "Single-cell RNA-seq analysis pipeline for Tsai Lab"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Tsai Lab", email = "your-email@example.com" }
]
keywords = ["single-cell", "RNA-seq", "bioinformatics", "scanpy"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # Core scientific computing
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    # Single-cell analysis
    "scanpy>=1.9.0",
    "anndata>=0.8.0",
    "scvelo>=0.2.4",
    # Doublet detection
    "scrublet>=0.2.3",
    # Visualization
    "matplotlib>=3.5.0",
    "seaborn>=0.11.0",
    # Gene set enrichment analysis
    "gseapy>=0.12.0",
    # Statistical analysis
    "statsmodels>=0.13.0",
    "scikit-learn>=1.0.0",
    # Data handling
    "h5py>=3.6.0",
    "tables>=3.7.0",
    # Graph-based clustering algorithms
    "leidenalg>=0.8.0",
    "python-igraph>=0.9.0",
    "louvain>=0.7.0",
    # For downloading gene sets
    "requests>=2.25.0",
    "scikit-misc>=0.2.0",
    "ipykernel>=6.31.0",
    "drive>=0.4.5",
]

[project.optional-dependencies]
docs = [
    "sphinx>=4.5.0",
    "sphinx-rtd-theme>=1.0.0",
    "sphinxcontrib-napoleon>=0.7",
]

[project.urls]
"Homepage" = "https://github.com/tsai-lab/tsai-lab-scrna"
"Bug Tracker" = "https://github.com/tsai-lab/tsai-lab-scrna/issues"
"Documentation" = "https://github.com/tsai-lab/tsai-lab-scrna#readme"

[tool.setuptools]
packages = ["utils"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["utils", "cellbender_qc_annotation", "limma_voom_gsea"]
omit = ["tests/*", "*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]





